--- a/css/cart.css
+++ b/css/cart.css
@@ -272,3 +272,30 @@ span#closeCartC:hover {
 	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
 	background-color: #ccc;
 }
+.phanTrang {
+    width: 100%;
+    position: relative;
+    display: flex;
+}
+
+.phanTrang ul {
+    list-style-type: none;
+    display: flex;
+    margin: auto;
+}
+
+.phanTrang ul li {
+    border: 2px solid orangered;
+    width: 35px;
+    height: 35px;
+    padding-top: 4px;
+    text-align: center;
+    font-weight: bold;
+}
+div#main_product {
+    width: 100%;
+}
+.phanTrang ul li a {
+    font-size: 16px;
+    color: black;
+}
