--- a/css/style-sanpham.css
+++ b/css/style-sanpham.css
@@ -105,10 +105,11 @@
 	background-color: #1E9E74;
 	color: white;
 	width: 100%;
-	height: 50px;
-	line-height: 50px;
+	line-height: 35px;
 	padding: 0px 16px;
-	border-radius: 10px;
+	border: 1px solid white;
+	margin-bottom: 3px;
+	position: relative;
 }
 #loctimsp {
 	padding-left: 20px;
@@ -125,8 +126,9 @@
 }
 .types-product-left {
 	width: 100%;
-	height: 210px;
+	height: 232px;
 	overflow: auto;
+	background-color: #ccc;
 }
 .types-product-left ul li {
 	list-style-type: none;
@@ -208,4 +210,42 @@
 }
 #cart:hover #hover-product-added {
 	display: block;
+}
+.head-name-product {
+	cursor: pointer;
+}
+.types-product-left::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	border-radius: 10px;
+	background-color: #ccc;
+}
+
+.types-product-left::-webkit-scrollbar
+{
+	width: 8px;
+	background-color: #ccc;
+}
+
+.types-product-left::-webkit-scrollbar-thumb
+{
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+	background-color: #1E9E74;
+}
+
+@keyframes hienLoc {
+  from {height: 0px;}
+  to {height: 232px;}
+}
+@keyframes anLoc {
+  from {height: 232px;}
+  to {height: 0px;}
+}
+i.fas.fa-sort-down {
+    font-weight: bold;
+    font-size: 19px;
+    padding-left: 10px;
+    position: absolute;
+    top: 5px;
 }
