--- a/css/header.css
+++ b/css/header.css
@@ -118,10 +118,10 @@ width: 34px;
 	height: 75%;
 }
 #search-header input {
-	width: 87%;
+	width: 96%;
 	padding: 8px;
 	line-height: normal;
-	border: none;
+	border: 1px solid;
 	background-color: white;
 }
 #search-header input:hover {
@@ -134,8 +134,8 @@ width: 34px;
 	padding: 8px;
 	background-color: #FDF1F3;
 	position: absolute;
-	right: 28px;
-	top: 0;
+	right: 10px;
+	top: 1px;
 }
 #header-right {
 	width: 35%;
