--- a/css/cart.css
+++ b/css/cart.css
@@ -170,12 +170,13 @@ a#tieptuc {
     display: inline-block;
 }
 
-a#capnhat {
+button#capnhat {
     background-color: red;
     font-weight: bold;
     color: white;
-    padding: 8px 25px;
+    padding: 6px 25px;
     margin-left: 1em;
+    border:none;
 }
 div#title-product {
     padding: 1em 0em;
