--- a/css/ttchitiet.css
+++ b/css/ttchitiet.css
@@ -7,22 +7,24 @@ div#mainfullcc {
 }
 div#mainFU {
     width: 100%;
-    height: 864px;
 }
 
 span#dong {
     position: fixed;
     right: 15px;
+    z-index: 93837646;
+    display: none;
 }
 .wrappers {
     width: 40%;
     background-color: white;
     padding: 1em;
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 28%;
     max-height: 864px;
     overflow: auto;
+    display: none;
 }
 
 .width {
